--- a/Ukraine 43/index.html
+++ b/Ukraine 43/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<meta http-equiv="refresh" content="5" />
 <script src="canvas0.js"></script>
 	
 </head>
@@ -497,8 +497,7 @@
 <img id="img487" src="/opt/Vassal/Ukraine 43/Weather-f.png" hidden>
 <img id="img488" src="/opt/Vassal/Ukraine 43/YellowSmallBox Flipped.png" hidden>
 
-<canvas id="Canvas0" width="5475" height="5100"
-style="border:1px solid #000000;">
+<canvas id="Canvas0" width="5475" height="5100" >
 Your browser does not support the HTML canvas tag.</canvas>
 
 
