--- a/Nuklear Winter 68/index.html
+++ b/Nuklear Winter 68/index.html
@@ -205,8 +205,7 @@
 <img id="img194" src="/opt/Vassal/Nuklear Winter 68/ZSU23 front.png" hidden>
 
 
-<canvas id="Canvas0" width="6372" height="4139"
-style="border:1px solid #000000;">
+<canvas id="Canvas0" width="6372" height="4139">
 Your browser does not support the HTML canvas tag.</canvas>
 
 
