--- a/Ukraine 43/chits.html
+++ b/Ukraine 43/chits.html
@@ -22,7 +22,7 @@
 
 <tr>
 <td>18</td>
-<td><img src="/opt/Vassal/Ukraine 43/GE-10S-101Jaeg-f.png" ></td>
+<td><img src="C:\Users\LawrenceCDumaguing\Pictures\Vassal\Ukraine 43\GE-10S-101Jaeg-f.png" ></td>
 <td><img src="/opt/Vassal/Ukraine 43/GE-10S-101Jaeg-r.png" ></td>
 <td></td>
 <td>GE-10S-101Jaeg</td>
