--- a/Ukraine 43/chits.html
+++ b/Ukraine 43/chits.html
@@ -574,18 +574,18 @@
 
 <tr>
 <td>87</td>
-<td><img src="/opt/Vassal/Ukraine 43/GE-E-239StugA-f.png" ></td>
+<td><img src="/opt/Vassal/Ukraine 43/GE-E-236Stug-f.png" ></td>
 <td></td>
 <td></td>
-<td>GE-E-239StugA</td>
+<td>GE-E-236Stug</td>
 </tr>
 
 <tr>
 <td>88</td>
-<td><img src="/opt/Vassal/Ukraine 43/GE-E-239StugB-f.png" ></td>
+<td><img src="/opt/Vassal/Ukraine 43/GE-E-239Stug-f.png" ></td>
 <td></td>
 <td></td>
-<td>GE-E-239StugB</td>
+<td>GE-E-239Stug</td>
 </tr>
 
 <tr>
