--- a/Ukraine 43/index.html
+++ b/Ukraine 43/index.html
@@ -184,8 +184,8 @@
 <img id="172" src="/opt/Vassal/Ukraine 43/GE-Air2-r.png" hidden>
 <img id="173" src="/opt/Vassal/Ukraine 43/GE-Dn-444SEC-f.png" hidden>
 <img id="174" src="/opt/Vassal/Ukraine 43/GE-E-228Stug-f.png" hidden>
-<img id="175" src="/opt/Vassal/Ukraine 43/GE-E-239StugA-f.png" hidden>
-<img id="176" src="/opt/Vassal/Ukraine 43/GE-E-239StugB-f.png" hidden>
+<img id="175" src="/opt/Vassal/Ukraine 43/GE-E-236Stug-f.png" hidden>
+<img id="176" src="/opt/Vassal/Ukraine 43/GE-E-239Stug-f.png" hidden>
 <img id="177" src="/opt/Vassal/Ukraine 43/GE-E-243Stug-f.png" hidden>
 <img id="178" src="/opt/Vassal/Ukraine 43/GE-Fort-1-f.png" hidden>
 <img id="179" src="/opt/Vassal/Ukraine 43/GE-Fort-1-r.png" hidden>
