--- a/Stalingrad 42/codes/chits3.html
+++ b/Stalingrad 42/codes/chits3.html
@@ -27,6 +27,12 @@
 <td>GE Utility Marker</td>
 </tr>
 <tr>
+<td>150</td>
+<td><img src="/opt/Vassal/Stalingrad 42/GE-cog wheels.png" ></td>
+<td></td>
+<td>GE-cog wheels</td>
+</tr>
+<tr>
 <td>151</td>
 <td><img src="/opt/Vassal/Stalingrad 42/GE-Control-Marker-1-f.png" ></td>
 <td><img src="/opt/Vassal/Stalingrad 42/GE-Control-Marker-1-r.png" ></td>
@@ -55,6 +61,12 @@
 <td><img src="/opt/Vassal/Stalingrad 42/GE-Phase-Marker-f.png" ></td>
 <td><img src="/opt/Vassal/Stalingrad 42/GE-Phase-Marker-r.png" ></td>
 <td>GE-Phase-Marker</td>
+</tr>
+<tr>
+<td>577</td>
+<td><img src="/opt/Vassal/Stalingrad 42/GE-RailHead-Inoperative-Marker-New-r.png" ></td>
+<td></td>
+<td>GE-RailHead-Inoperative-Marker-New</td>
 </tr>
 <tr>
 <td>165</td>
@@ -219,6 +231,12 @@
 <td>SO-6ReserveArmy-Marker</td>
 </tr>
 <tr>
+<td>516</td>
+<td><img src="/opt/Vassal/Stalingrad 42/SO-cog wheels.png" ></td>
+<td></td>
+<td>SO-cog wheels</td>
+</tr>
+<tr>
 <td>518</td>
 <td><img src="/opt/Vassal/Stalingrad 42/SO-Fort-Marker-1-f.png" ></td>
 <td><img src="/opt/Vassal/Stalingrad 42/SO-Fort-Marker-1-r.png" ></td>
@@ -313,12 +331,6 @@
 <td><img src="/opt/Vassal/Stalingrad 42/Type 5 Utility Marker.png" ></td>
 <td></td>
 <td>Type 5 Utility Marker</td>
-</tr>
-<tr>
-<td>577</td>
-<td><img src="/opt/Vassal/Stalingrad 42/GE-RailHead-Inoperative-Marker-New-r.png" ></td>
-<td></td>
-<td>GE-RailHead-Inoperative-Marker-New</td>
 </tr>
 <tr><th>Id</th><th>Front</th><th>Back</th>
 <th>Name</th></tr></table></body></html>
