--- a/Stalingrad 42/codes/chits4.html
+++ b/Stalingrad 42/codes/chits4.html
@@ -3,10 +3,40 @@
 <tr><th>Id</th><th>Front</th>
 <th>Back</th><th>Name</th></tr>
 <tr>
+<td>196</td>
+<td><img src="/opt/Vassal/Stalingrad 42/German Display Q12.jpg" ></td>
+<td></td>
+<td>German Display Q12</td>
+</tr>
+<tr>
+<td>238</td>
+<td><img src="/opt/Vassal/Stalingrad 42/Permanently Eliminated Display Q12.jpg" ></td>
+<td></td>
+<td>Permanently Eliminated Display Q12</td>
+</tr>
+<tr>
+<td>239</td>
+<td><img src="/opt/Vassal/Stalingrad 42/REPL CHART-100 Q12.jpg" ></td>
+<td></td>
+<td>REPL CHART-100 Q12</td>
+</tr>
+<tr>
 <td>240</td>
 <td><img src="/opt/Vassal/Stalingrad 42/Replacement & Marker Charts 100 Q12.jpg" ></td>
 <td></td>
 <td>Replacement & Marker Charts 100 Q12</td>
+</tr>
+<tr>
+<td>269</td>
+<td><img src="/opt/Vassal/Stalingrad 42/S1-S4 TRT Q12.jpg" ></td>
+<td></td>
+<td>S1-S4 TRT Q12</td>
+</tr>
+<tr>
+<td>548</td>
+<td><img src="/opt/Vassal/Stalingrad 42/Soviet Display Q12.jpg" ></td>
+<td></td>
+<td>Soviet Display Q12</td>
 </tr>
 <tr>
 <td>551</td>
@@ -79,6 +109,12 @@
 <td><img src="/opt/Vassal/Stalingrad 42/STAL42_TRT-Uranus-150 Q12.jpg" ></td>
 <td></td>
 <td>STAL42_TRT-Uranus-150 Q12</td>
+</tr>
+<tr>
+<td>574</td>
+<td><img src="/opt/Vassal/Stalingrad 42/Weather-VP Display 150 Q12.jpg" ></td>
+<td></td>
+<td>Weather-VP Display 150 Q12</td>
 </tr>
 <tr><th>Id</th><th>Front</th><th>Back</th>
 <th>Name</th></tr></table></body></html>
