--- a/Stalingrad 42/codes/chart.html
+++ b/Stalingrad 42/codes/chart.html
@@ -1,120 +1,100 @@
 <!DOCTYPE html>
 <html><head></head><body><table>
-<tr><th>Id</th><th>Front</th>
-<th>Back</th><th>Name</th></tr>
+<tr><th>Id</th><th>Image</th>
+<th>Name</th></tr>
 <tr>
-<td>196</td>
+<td>296</td>
 <td><img src="/opt/Vassal/Stalingrad 42/German Display Q12.jpg" ></td>
-<td></td>
-<td>German Display Q12</td>
+<td>German Display Q12.jpg</td>
 </tr>
 <tr>
-<td>238</td>
+<td>360</td>
 <td><img src="/opt/Vassal/Stalingrad 42/Permanently Eliminated Display Q12.jpg" ></td>
-<td></td>
-<td>Permanently Eliminated Display Q12</td>
+<td>Permanently Eliminated Display Q12.jpg</td>
 </tr>
 <tr>
-<td>239</td>
+<td>361</td>
 <td><img src="/opt/Vassal/Stalingrad 42/REPL CHART-100 Q12.jpg" ></td>
-<td></td>
-<td>REPL CHART-100 Q12</td>
+<td>REPL CHART-100 Q12.jpg</td>
 </tr>
 <tr>
-<td>240</td>
+<td>362</td>
 <td><img src="/opt/Vassal/Stalingrad 42/Replacement & Marker Charts 100 Q12.jpg" ></td>
-<td></td>
-<td>Replacement & Marker Charts 100 Q12</td>
+<td>Replacement & Marker Charts 100 Q12.jpg</td>
 </tr>
 <tr>
-<td>269</td>
+<td>418</td>
 <td><img src="/opt/Vassal/Stalingrad 42/S1-S4 TRT Q12.jpg" ></td>
-<td></td>
-<td>S1-S4 TRT Q12</td>
+<td>S1-S4 TRT Q12.jpg</td>
 </tr>
 <tr>
-<td>548</td>
+<td>888</td>
 <td><img src="/opt/Vassal/Stalingrad 42/Soviet Display Q12.jpg" ></td>
-<td></td>
-<td>Soviet Display Q12</td>
+<td>Soviet Display Q12.jpg</td>
 </tr>
 <tr>
-<td>551</td>
+<td>891</td>
 <td><img src="/opt/Vassal/Stalingrad 42/STAL42_Axis_AtStart-150 Q12.jpg" ></td>
-<td></td>
-<td>STAL42_Axis_AtStart-150 Q12</td>
+<td>STAL42_Axis_AtStart-150 Q12.jpg</td>
 </tr>
 <tr>
-<td>552</td>
+<td>892</td>
 <td><img src="/opt/Vassal/Stalingrad 42/STAL42_Axis_Caucasus-150 Q12.jpg" ></td>
-<td></td>
-<td>STAL42_Axis_Caucasus-150 Q12</td>
+<td>STAL42_Axis_Caucasus-150 Q12.jpg</td>
 </tr>
 <tr>
-<td>553</td>
+<td>893</td>
 <td><img src="/opt/Vassal/Stalingrad 42/STAL42_Axis_REINF-150 Q12.jpg" ></td>
-<td></td>
-<td>STAL42_Axis_REINF-150 Q12</td>
+<td>STAL42_Axis_REINF-150 Q12.jpg</td>
 </tr>
 <tr>
-<td>554</td>
+<td>894</td>
 <td><img src="/opt/Vassal/Stalingrad 42/STAL42_Axis_Uranus-150 Q12.jpg" ></td>
-<td></td>
-<td>STAL42_Axis_Uranus-150 Q12</td>
+<td>STAL42_Axis_Uranus-150 Q12.jpg</td>
 </tr>
 <tr>
-<td>555</td>
+<td>895</td>
 <td><img src="/opt/Vassal/Stalingrad 42/STAL42_CRT-100 Q12.jpg" ></td>
-<td></td>
-<td>STAL42_CRT-100 Q12</td>
+<td>STAL42_CRT-100 Q12.jpg</td>
 </tr>
 <tr>
-<td>560</td>
+<td>900</td>
 <td><img src="/opt/Vassal/Stalingrad 42/STAL42_Soviet_AtStart-150 Q12.jpg" ></td>
-<td></td>
-<td>STAL42_Soviet_AtStart-150 Q12</td>
+<td>STAL42_Soviet_AtStart-150 Q12.jpg</td>
 </tr>
 <tr>
-<td>561</td>
+<td>901</td>
 <td><img src="/opt/Vassal/Stalingrad 42/STAL42_Soviet_Caucasus-150 Q12.jpg" ></td>
-<td></td>
-<td>STAL42_Soviet_Caucasus-150 Q12</td>
+<td>STAL42_Soviet_Caucasus-150 Q12.jpg</td>
 </tr>
 <tr>
-<td>562</td>
+<td>902</td>
 <td><img src="/opt/Vassal/Stalingrad 42/STAL42_Soviet_REINF-150 Q12.jpg" ></td>
-<td></td>
-<td>STAL42_Soviet_REINF-150 Q12</td>
+<td>STAL42_Soviet_REINF-150 Q12.jpg</td>
 </tr>
 <tr>
-<td>563</td>
+<td>903</td>
 <td><img src="/opt/Vassal/Stalingrad 42/STAL42_Soviet_Uranus-150 Q12.jpg" ></td>
-<td></td>
-<td>STAL42_Soviet_Uranus-150 Q12</td>
+<td>STAL42_Soviet_Uranus-150 Q12.jpg</td>
 </tr>
 <tr>
-<td>564</td>
+<td>904</td>
 <td><img src="/opt/Vassal/Stalingrad 42/STAL42_TEC-100 Q12.jpg" ></td>
-<td></td>
-<td>STAL42_TEC-100 Q12</td>
+<td>STAL42_TEC-100 Q12.jpg</td>
 </tr>
 <tr>
-<td>565</td>
+<td>905</td>
 <td><img src="/opt/Vassal/Stalingrad 42/STAL42_TRT-Caucasus-150 Q12.jpg" ></td>
-<td></td>
-<td>STAL42_TRT-Caucasus-150 Q12</td>
+<td>STAL42_TRT-Caucasus-150 Q12.jpg</td>
 </tr>
 <tr>
-<td>566</td>
+<td>906</td>
 <td><img src="/opt/Vassal/Stalingrad 42/STAL42_TRT-Uranus-150 Q12.jpg" ></td>
-<td></td>
-<td>STAL42_TRT-Uranus-150 Q12</td>
+<td>STAL42_TRT-Uranus-150 Q12.jpg</td>
 </tr>
 <tr>
-<td>574</td>
+<td>914</td>
 <td><img src="/opt/Vassal/Stalingrad 42/Weather-VP Display 150 Q12.jpg" ></td>
-<td></td>
-<td>Weather-VP Display 150 Q12</td>
+<td>Weather-VP Display 150 Q12.jpg</td>
 </tr>
-<tr><th>Id</th><th>Front</th><th>Back</th>
-<th>Name</th></tr></table></body></html>
+</table></body></html>
